fixed the z-index

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,7 +2,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f4f4f4
+    background-color: #f4f4f4;
 }
 
 header {
@@ -15,7 +15,7 @@ header {
     padding: 0px 10px 10px 10px;
     transform: translateY(0);
     transition: transform 0.2s ease-in-out;
-    z-index: 1000;
+    z-index: 1;
 }
 
 .content {
@@ -86,7 +86,7 @@ header {
 .panel {
     display: none;
     position: fixed;
-    z-index: 1;
+    z-index: 2;
     left: 0;
     top: 0;
     width: 100%;
